i18n = import('i18n')

translations = i18n.gettext('git',
  languages: [
    'bg',
    'ca',
    'de',
    'el',
    'es',
    'fr',
    'id',
    'is',
    'it',
    'ko',
    'pl',
    'pt_PT',
    'ru',
    'sv',
    'tr',
    'uk',
    'vi',
    'zh_CN',
    'zh_TW',
  ],
  install: true,
)
test_dependencies += translations[0]
